Remove backend execution (localStage components) moving to follow up pr
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>